// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container: renders default snapshot as expected 1`] = `
<div
  className="css-168wbq6"
/>
`;

exports[`Container: renders fullWidth snapshot as expected 1`] = `
<div
  className="css-ldojlq"
/>
`;
